--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express-jwt": "^5.3.3",
     "nodemon": "^2.0.4"
   }
 }
