--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express-jwt": "^5.3.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "regex": "^0.1.1"
   }
 }
